syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.purchase";
option java_outer_classname = "ProductServiceProto";

package com.example.purchase;

import "google/protobuf/empty.proto";

message Product {
    string id = 1;
    string name = 2;
    int32 quantity = 3;
    double price = 4;
}

message ProductResponse {
    Product product = 1;
}

service ProductService {
    rpc GetRandomProduct (google.protobuf.Empty) returns (ProductResponse);
    rpc UpdateProduct (Product) returns (google.protobuf.Empty);
}
